Named colours added + Culture names localized

--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -24,12 +24,21 @@
  gothic:0 "Gutþisk"
  gothic_prefix:0 "Gotho"
  gothic_collective_noun:0 "Gutþiuda"
- albanian:0 "Albanian"
+ geat:0 "Gautisk"
+ geat_prefix:0 "Geato"
+ geat_collective_noun:0 "Gautr"
+ icelandic:0 "Íslondska"
+ icelandic_prefix:0 "Icelando"
+ icelandic_collective_noun:0 "Íslondskr"
+ faroese:0 "Føroyskt"
+ faroese_prefix:0 "Faroe"
+ faroese_collective_noun:0 "Føroyingar"
+ albanian:0 "Arbënisht"
  albanian_prefix:0 "Albano"
- albanian_collective_noun:0 "Albanian"
- egyptian_copt:0 "Remənkhēmi"
- egyptian_copt_prefix:0 "Remənkhēmi"
- egyptian_copt_collective_noun:0 "Niremənkhēmi"
+ albanian_collective_noun:0 "Arbënesh"
+ egyptian_copt:0 "Remenkhēmi"
+ egyptian_copt_prefix:0 "Remenkhēmi"
+ egyptian_copt_collective_noun:0 "Niremenkhēmi"
  mizrahi:0 "Mizrahi"
  mizrahi_prefix:0 "Mizrahi"
  mizrahi_collective_noun:0 "Mizrahim"
@@ -38,19 +47,19 @@
  ainu_collective_noun:0 "Aynus"
  baiyue_group:0 "Baiyue"
  baiyue_group_collective_noun:0 "Baiyue"
- vietnamese:0 "Người Việt"
+ vietnamese:0 "Việt"
  vietnamese_prefix:0 "Việt"
  vietnamese_collective_noun:0 "Người Việt"
  korean_group:0 "Goguryeo"
  korean_group_collective_noun:0 "Goguryeo"
- korean:0 "Goryeo-in"
+ korean:0 "Goryeo"
  korean_prefix:0 "Korean"
  korean_collective_noun:0 "Goryeo-in"
  chinese_group:0 "Chinese"
  chinese_group_collective_noun:0 "Chinese"
- beta_israeli:0 "Beta Israeli"
+ beta_israeli:0 "Beta Yisrael"
  beta_israeli_prefix:0 "Beta"
- beta_israeli_collective_noun:0 "Beta Israeli"
+ beta_israeli_collective_noun:0 "Beta Yisrael"
  han:0 "Hànrén"
  han_collective_noun:0 "Hànrén"
  kaifeng_jew:0 "Yóutàirén"
