--- a/localization/english/replace/culture_replace_l_english.yml
+++ b/localization/english/replace/culture_replace_l_english.yml
@@ -1,4 +1,341 @@
 ﻿l_english:
+ turkish:0 "Oǧuz"
+ turkish_prefix:0 "Oghuz"
+ turkish_noun:0 "Oǧuz"
+ bolghar:0 "Bulǧar"
+ bolghar_collective_noun:1 "Bulǧar"
  egyptian:0 "Miṣriyy"
  egyptian_prefix:0 "Egypto"
  egyptian_collective_noun:1 "Miṣriyyīna"
+ anglo_saxon:0 "Angelcynn"
+ anglo_saxon_collective_noun:0 "Angelcynn"
+ cornish:0 "Kernowek"
+ cornish_collective_noun:0 "Kernowek"
+ pictish:0 "Ficht"
+ pictish_collective_noun:0 "Ficht"
+ cumbric:0 "Cumbri"
+ cumbric_collective_noun:0 "Cumbri"
+ cumbrian:0 "$cumbric$"
+ cumbrian_collective_noun:0 "$cumbric_collective_noun$"
+ langobardisch:0 "Langobardo"
+ langobardisch_collective_noun:0 "Langobardo"
+ ugricbaltic:0 "Eestlased"
+ ugricbaltic_collective_noun:0 "Eestlased"
+ estonian:0 "$ugricbaltic$"
+ estonian_collective_noun:0 "$ugricbaltic_collective_noun$"
+ livonian:0 "Livonijas"
+ livonian_collective_noun:0 "Livonijas"
+ bosnian:0 "Bosanski"
+ bosnian_collective_noun:0 "Bosnjaci"
+ arberian:0 "Arbëreshë"
+ arberian_collective_noun:0 "Arbëreshë"
+ serbian:0 "Srpski"
+ serbian_collective_noun:0 "Srbi"
+ sicilian:0 "Sicilianu"
+ sicilian_collective_noun:0 "Sicilianu"
+ sicilian_arabic:0 "Siqilli"
+ sicilian_arabic_collective_noun:0 "Siqilli"
+ pommeranian:0 "Vendi"
+ pommeranian_collective_noun:0 "Vendi"
+ crusader_culture:0 "Levantine"
+ crusader_culture_collective_noun:0 "Levantine"
+ irish:0 "Goidel"
+ irish_collective_noun:0 "Goidel"
+ gaelic:0 "Albannaich"
+ gaelic_collective_noun:0 "Albannaich"
+ scottish:0 "Scots"
+ scottish_collective_noun:0 "Scots"
+ anglonorse:0 "Englisc"
+ anglonorse_collective_noun:0 "Englisc"
+ norsegaelic:0 "Gall Goidel"
+ norsegaelic_collective_noun:0 "Gall Goidel"
+ judaic:0 "Judaic"
+ judaic_collective_noun:0 "Judaic"
+ welsh:0 "Cymreig"
+ welsh_collective_noun:0 "Cymreig"
+ norse:0 "Norrønn"
+ norse_collective_noun:0 "Norrønn"
+ norwegian:0 "Norsk"
+ norwegian_collective_noun:0 "Norskr"
+ danish:0 "Dansk"
+ danish_collective_noun:0 "Danskr"
+ swedish:0 "Svenska"
+ swedish_collective_noun:0 "Svenskr"
+ hungarian:0 "Magyar"
+ hungarian_collective_noun:0 "Magyar"
+ carantanian:0 "Karantánski"
+ carantanian_collective_noun:0 "Karantánski"
+ sardinian:0 "Sardu"
+ sardinian_collective_noun:0 "Sardu"
+ moravian:0 "Moravský"
+ moravian_collective_noun:0 "Moravský"
+ french:0 "Francique"
+ french_collective_noun:0 "Francique"
+ norman:0 "Normaund"
+ norman_collective_noun:0 "Normaund"
+ basque:0 "Euskara"
+ basque_collective_noun:0 "Euskara"
+ castillan:0 "Castellano"
+ castillan_collective_noun:0 "Castellano"
+ catalan:0 "Català"
+ catalan_collective_noun:0 "Català"
+ portuguese:0 "Português"
+ portuguese_collective_noun:0 "Português"
+ breton:0 "Bretoned"
+ breton_collective_noun:0 "Bretoned"
+ polish:0 "Polski"
+ polish_collective_noun:0 "Polak"
+ polabian:0 "Połabski"
+ polabian_collective_noun:1 "Połab"
+ bohemian:0 "Ceský"
+ bohemian_collective_noun:0 "Čech"
+ czech:0 "$bohemian$"
+ czech_collective_noun:0 "$bohemian_collective_noun$"
+ slovien:0 "Slovenský"
+ slovien_collective_noun:0 "Slovák"
+ croatian:0 "Hrvatski"
+ croatian_collective_noun:0 "Hrvati"
+ bulgarian:0 "Bálgarski"
+ bulgarian_collective_noun:0 "Bálgari"
+ prussian:0 "Prusiskan"
+ prussian_collective_noun:0 "Prusiskan"
+ lithuanian:0 "Lietuviu"
+ lithuanian_collective_noun:0 "Lietuviu"
+ latgalian:0 "Latgalīšu"
+ latgalian_collective_noun:0 "Latgales"
+ finnish:0 "Suomalainen"
+ finnish_collective_noun:0 "Suomalainen"
+ lappish:0 "Sámi"
+ lappish_collective_noun:0 "Sámi"
+ russian:0 "Rusĭskŭ"
+ russian_collective_noun:0 "Rusĭskŭ"
+ ilmenian:0 "Il'menskŭ"
+ ilmenian_collective_noun:1 "Il'menskŭ"
+ severian:0 "Severskŭ"
+ severian_collective_noun:1 "Severjánin"
+ volhynian:0 "Volynskŭ"
+ volhynian_collective_noun:1 "Volynjánin"
+ greek:0 "Elliniká"
+ greek_collective_noun:0 "Éllinas"
+ armenian:0 "Hay"
+ armenian_collective_noun:0 "Hay"
+ udi:0 "Udi"
+ udi_collective_noun:0 "Udi"
+ somali:0 "Soomaali"
+ somali_collective_noun:0 "Soomaali"
+ andalusian_arabic:0 "Andalusí"
+ andalusian_arabic_collective_noun:0 "Andalusí"
+ andalusian:0 "$andalusian_arabic$"
+ andalusian_collective_noun:0 "$andalusian_arabic_collective_noun$"
+ canarian:0 "Guanchinet"
+ canarian_collective_noun:0 "Guanchinet"
+ umbrian:0 "Umbro"
+ umbrian_collective_noun:0 "Umbro"
+ venetian:0 "Veneto"
+ venetian_collective_noun:0 "Veneto"
+ tuscan:0 "Toscano"
+ tuscan_collective_noun:0 "Toscano"
+ ligurian:0 "Ligure"
+ ligurian_collective_noun:0 "Ligure"
+ arpitan:0 "Arpitan"
+ arpitan_collective_noun:0 "Arpitan"
+ cisalpine:0 "Lombardo"
+ cisalpine_collective_noun:0 "Lombardo"
+ dalmatian:0 "Dalmata"
+ dalmatian_collective_noun:0 "Dalmata"
+ laziale:0 "Laziale"
+ laziale_collective_noun:0 "Laziale"
+ neapolitan:0 "Neapolitano"
+ neapolitan_collective_noun:0 "Neapolitano"
+ berber:0 "Iznagen"
+ berber_collective_noun:0 "Iznagen"
+ tuareg:0 "Kel Tamashek"
+ tuareg_collective_noun:0 "Kel Tamashek"
+ gascon:0 "Gascona"
+ gascon_collective_noun:0 "Gascona"
+ icelandic:0 "Íslondskr"
+ icelandic_collective_noun:0 "Íslondskr"
+ bedouin_arabic:0 "Badawi"
+ bedouin_arabic_collective_noun:0 "Badawi"
+ bedouin:0 "$bedouin_arabic$"
+ bedouin_collective_noun:0 "$bedouin_arabic_collective_noun$"
+ hijazi:0 "Hijazi"
+ hijazi_collective_noun:0 "Hijazi"
+ yemeni:0 "Yamani"
+ yemeni_collective_noun:0 "Yamani"
+ egyptian_arabic:0 "Misri"
+ egyptian_arabic_collective_noun:0 "Misri"
+ levantine_arabic:0 "Mashriqi"
+ levantine_arabic_collective_noun:0 "Mashriqi"
+ komi:0 "Komi"
+ komi_collective_noun:0 "Komi"
+ mongol:0 "Mongolchuud"
+ mongol_collective_noun:0 "Mongolchuud"
+ kurdish:0 "Kurdi"
+ kurdish_collective_noun:0 "Kurdi"
+ assyrian:0 "Suryaye"
+ assyrian_collective_noun:0 "Suryaye"
+ ethiopian:0 "Ye-Ityoppya"
+ ethiopian_collective_noun:0 "Ye-Ityoppya"
+ georgian:0 "Kartveli"
+ georgian_collective_noun:0 "Kartveli"
+ alan:0 "Alan"
+ alan_collective_noun:0 "Alan"
+ caucasian_avar:0 "Avaral"
+ caucasian_avar_collective_noun:0 "Avaral"
+ aragonese:0 "Aragonés"
+ aragonese_collective_noun:0 "Aragonés"
+ leonese:0 "Llionés"
+ leonese_collective_noun:0 "Llionés"
+ asturleonese:0 "$leonese$"
+ asturleonese_collective_noun:0 "$leonese_collective_noun$"
+ obotrite:0 "Abordite"
+ obotrite_collective_noun:0 "Abordite"
+ lutici:0 "Lutici"
+ lutici_collective_noun:0 "Lutici"
+ galician:0 "Galego"
+ galician_collective_noun:0 "Galego"
+ maghreb_arabic:0 "Maghribi"
+ maghreb_arabic_collective_noun:0 "Maghribi"
+ samoyed:0 "Nenetsi"
+ samoyed_collective_noun:0 "Nenetsi"
+ karelian:0 "Karjalainen"
+ karelian_collective_noun:0 "Karjalainen"
+ vepsian:0 "Vepsläne"
+ vepsian_collective_noun:0 "Vepsläne"
+ mari:0 "Mejralainen"
+ mari_collective_noun:0 "Mejralainen"
+ ingrian:0 "Inkerilainen"
+ ingrian_collective_noun:0 "Inkerilainen"
+ khanty:0 "Mansi"
+ khanty_collective_noun:0 "Mansi"
+ mordvin:0 "Mokshet"
+ mordvin_collective_noun:0 "Mokshet"
+ italian_group:0 "Italian"
+ italian_group_collective_noun:0 "Italian"
+ sanhaja:0 "Znága"
+ sanhaja_collective_noun:0 "Znága"
+ masmuda:0 "Imesmuden"
+ masmuda_collective_noun:0 "Imesmuden"
+ zanata:0 "Aznáta"
+ zanata_collective_noun:0 "Aznáta"
+ soninke:0 "Soninke"
+ soninke_collective_noun:0 "Soninke"
+ wolof:0 "Wolof"
+ wolof_collective_noun:0 "Wolof"
+ songhay:0 "Songhai"
+ songhay_collective_noun:0 "Songhai"
+ tagelmust:0 "Tagelmust"
+ tagelmust_collective_noun:0 "Tagelmust"
+ hausa:0 "Hausa"
+ hausa_collective_noun:0 "Hausa"
+ kanuri:0 "Kanuri"
+ kanuri_collective_noun:0 "Kanuri"
+ zaghawa:0 "Zaghawa"
+ zaghawa_collective_noun:0 "Zaghawa"
+ beja:0 "Bedawiye"
+ beja_collective_noun:0 "Bedawiye"
+ nubian:0 "Nòòbíí"
+ nubian_collective_noun:0 "Nòòbíí"
+ daju:0 "Daju"
+ daju_collective_noun:0 "Daju"
+ falashim:0 "Beta Yisrael"
+ falashim_collective_noun:0 "Beta Yisrael"
+ afar:0 "Qafár"
+ afar_collective_noun:0 "Qafár"
+ khorasani:0 "Khorásání"
+ khorasani_collective_noun:0 "Khorásání"
+ khwarezmi:0 "Khwárazmí"
+ khwarezmi_collective_noun:0 "Khwárazmí"
+ sogdian:0 "Sughdik"
+ sogdian_collective_noun:0 "Sughdik"
+ saka:0 "Hvamnai"
+ saka_collective_noun:0 "Hvamnai"
+ name_list_saka:0 "Hvamnai"
+ saka_collective_noun:1 "Hvamnai"
+ tocharian:0 "Tokharí"
+ tocharian_collective_noun:0 "Tokharí"
+ daylamite:0 "Daylamí"
+ daylamite_collective_noun:0 "Daylamí"
+ afghan:0 "Afghāni"
+ afghan_collective_noun:0 "Afghāni"
+ uyghur:0 "Uyǧur"
+ uyghur_collective_noun:0 "Uyǧur"
+ yughur:0 "Yuǧur"
+ yughur_collective_noun:0 "Yuǧurlar"
+ chuvash:0 "Čăvaš"
+ chuvash_collective_noun:0 "Čăvaš"
+ kirghiz:0 "Qırǧız"
+ kirghiz_collective_noun:0 "Qırǧız"
+ tajik:0 "Tajik"
+ tajik_collective_noun:0 "Tajik"
+ kipchak:0 "Qipçaq"
+ kipchak_collective_noun:0 "Qipçaq"
+ cuman:0 "Qun"
+ cuman_collective_noun:1 "Qun"
+ karluk:0 "Qarluq"
+ karluk_collective_noun:0 "Qarluq"
+ pecheneg:0 "Beçenek"
+ pecheneg_collective_noun:0 "Beçenek"
+ khazar:0 "Qasar"
+ khazar_collective_noun:0 "Qasar"
+ kabar:0 "Qabar"
+ kabar_collective_noun:0 "Qabar"
+ oghuz:0 "Oghuz"
+ oghuz_collective_noun:0 "Oghuz"
+ turkmen:0 "Türkmen"
+ turkmen_collective_noun:0 "Türkmen"
+ pahlavi:0 "Parsig"
+ pahlavi_collective_noun:0 "Parsig"
+ persian:0 "Pársí"
+ persian_collective_noun:0 "Pársí"
+ adhari:0 "Adharí"
+ adhari_collective_noun:0 "Adharí"
+ bashkir:0 "Bashqurd"
+ bashkir_collective_noun:0 "Bashqurd"
+ kasogi:0 "Adyghe"
+ kasogi_collective_noun:0 "Adyghe"
+ szekely:0 "Székely"
+ szekely_collective_noun:0 "Székely"
+ german:0 "Diutsch"
+ german_collective_noun:0 "Diutsch"
+ dutch:0 "Dietsch"
+ dutch_collective_noun:0 "Dietsch"
+ low_german:0 "Düdisch"
+ low_german_collective_noun:0 "Düdisch"
+ low_saxon:0 "Sehsisk"
+ low_saxon_collective_noun:0 "Sehsisk"
+ saxon:0 "$low_saxon$"
+ saxon_collective_noun:0 "$low_saxon_collective_noun$"
+ old_saxon:0 "Saksisk"
+ old_saxon_noun:0 "Saksisk"
+ thuringian:0 "Duringisk"
+ thuringian_collective_noun:0 "Duringisk"
+ frankish:0 "Frenkisc"
+ frankish_collective_noun:0 "Frenkisc"
+ franconian:0 "Frenkisk"
+ franconian_collective_noun:0 "Frenkisk"
+ low_frankish:0 "Frankisk"
+ low_frankish_collective_noun:0 "Frankisk"
+ bavarian:0 "Beiarisk"
+ bavarian_collective_noun:0 "Beiarisk"
+ swabian:0 "Alamannisk"
+ swabian_collective_noun:0 "Alamannisk"
+ frisian:0 "Fresisk"
+ frisian_collective_noun:0 "Fresisk"
+ qufs:0 "Kufichi"
+ qufs_collective_noun:0 "Kufichi"
+ khalaj:0 "Khaláj"
+ khalaj_collective_noun:0 "Khaláj"
+ brahui:0 "Brahui"
+ brahui_collective_noun:0 "Brahui"
+ romanian:0 "Rumân"
+ romanian_collective_noun:0 "Rumân"
+ vlach:0 "$romanian$"
+ vlach_collective_noun:0 "$romanian_collective_noun$"
+ khitan:0 "Qidun"
+ khitan_collective_noun:0 "Qidun"
+ burmese:0 "Mranma"
+ burmese_collective_noun:0 "Mranma"
+ jurchen:0 "Jušen"
+ jurchen_collective_noun:1 "Jušen"
