--- a/localization/english/culture/traditions/eastern_languages_l_english.yml
+++ b/localization/english/culture/traditions/eastern_languages_l_english.yml
@@ -3,10 +3,10 @@
  language_central_iranian_name:0 "Farsi"
  language_north_iranian_name:0 "Soghdian"
  language_east_iranian_name:0 "Sharqi"
- name_list_saka:0 "Sharqi"
- saka:0 "Sharqi"
- saka_prefix:0 "Sharqi"
- saka_collective_noun:1 "Sharqi"
+ name_list_saka:0 "Hvamnai"
+ saka:0 "Hvamnai"
+ saka_prefix:0 "Hvamnai"
+ saka_collective_noun:1 "Hvamnai"
  language_japanese_name:0 "Japanese"
  language_ainu_name:0 "Ainu"
  language_vietnamese_name:0 "Vietnamese"
