Added events to cause the flipping to Icelandic, Faroese and Geat.

--- a/localization/english/replace/culture_replace_l_english.yml
+++ b/localization/english/replace/culture_replace_l_english.yml
@@ -25,12 +25,12 @@
  estonian_collective_noun:0 "$ugricbaltic_collective_noun$"
  livonian:0 "Livonijas"
  livonian_collective_noun:0 "Livonijas"
- bosnian:0 "Bosanski"
- bosnian_collective_noun:0 "Bosnjaci"
+ bosnian:0 "Bosanĭskŭ"
+ bosnian_collective_noun:0 "Bosanĭki"
  arberian:0 "Arbëreshë"
  arberian_collective_noun:0 "Arbëreshë"
- serbian:0 "Srpski"
- serbian_collective_noun:0 "Srbi"
+ serbian:0 "Sĭrbinĭskŭ"
+ serbian_collective_noun:0 "Sĭrbi"
  sicilian:0 "Sicilianu"
  sicilian_collective_noun:0 "Sicilianu"
  sicilian_arabic:0 "Siqilli"
@@ -67,8 +67,8 @@
  carantanian_collective_noun:0 "Karantánski"
  sardinian:0 "Sardu"
  sardinian_collective_noun:0 "Sardu"
- moravian:0 "Moravský"
- moravian_collective_noun:0 "Moravský"
+ moravian:0 "Moravĭskŭ"
+ moravian_collective_noun:0 "Moravĭki"
  french:0 "Francique"
  french_collective_noun:0 "Francique"
  norman:0 "Normaund"
@@ -83,20 +83,20 @@
  portuguese_collective_noun:0 "Português"
  breton:0 "Bretoned"
  breton_collective_noun:0 "Bretoned"
- polish:0 "Polski"
- polish_collective_noun:0 "Polak"
- polabian:0 "Połabski"
- polabian_collective_noun:1 "Połab"
- bohemian:0 "Ceský"
- bohemian_collective_noun:0 "Čech"
+ polish:0 "Polyanĭskŭ"
+ polish_collective_noun:0 "Polyaki"
+ polabian:0 "Połabĭskŭ"
+ polabian_collective_noun:1 "Połabaňe"
+ bohemian:0 "Češĭskŭ"
+ bohemian_collective_noun:0 "Čehi"
  czech:0 "$bohemian$"
  czech_collective_noun:0 "$bohemian_collective_noun$"
- slovien:0 "Slovenský"
- slovien_collective_noun:0 "Slovák"
- croatian:0 "Hrvatski"
- croatian_collective_noun:0 "Hrvati"
- bulgarian:0 "Bálgarski"
- bulgarian_collective_noun:0 "Bálgari"
+ slovien:0 "Slověnĭskŭ"
+ slovien_collective_noun:0 "Slověne"
+ croatian:0 "Hrŭvatĭskŭ"
+ croatian_collective_noun:0 "Hrŭvati"
+ bulgarian:0 "blŭgarĭskŭ"
+ bulgarian_collective_noun:0 "Blŭgari"
  prussian:0 "Prusiskan"
  prussian_collective_noun:0 "Prusiskan"
  lithuanian:0 "Lietuviu"
@@ -108,13 +108,13 @@
  lappish:0 "Sámi"
  lappish_collective_noun:0 "Sámi"
  russian:0 "Rusĭskŭ"
- russian_collective_noun:0 "Rusĭskŭ"
- ilmenian:0 "Il'menskŭ"
- ilmenian_collective_noun:1 "Il'menskŭ"
- severian:0 "Severskŭ"
- severian_collective_noun:1 "Severjánin"
- volhynian:0 "Volynskŭ"
- volhynian_collective_noun:1 "Volynjánin"
+ russian_collective_noun:0 "Rusĭni"
+ ilmenian:0 "Ilĭmerĭskŭ"
+ ilmenian_collective_noun:1 "Ilĭmeręne"
+ severian:0 "Sěverĭskŭ"
+ severian_collective_noun:1 "Sěveręne"
+ volhynian:0 "Volynĭskŭ"
+ volhynian_collective_noun:1 "Volynęne"
  greek:0 "Elliniká"
  greek_collective_noun:0 "Éllinas"
  armenian:0 "Hay"
