--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -232,12 +232,12 @@
  malay:0 "Malay"
  malay_prefix:0 "Malayo"
  malay_collective_noun:0 "Malay"
- achenese:0 "Achenese"
- achenese_prefix:0 "Acheno-"
- achenese_collective_noun:0 "Achenese"
- javanese:0 "Javanese"
+ achenese:0 "Aceh"
+ achenese_prefix:0 "Acheno"
+ achenese_collective_noun:0 "Aceh"
+ javanese:0 "Java"
  javanese_prefix:0 "Java"
- javanese_collective_noun:0 "Javanese"
+ javanese_collective_noun:0 "Java"
  batak:0 "Batak"
  batak_prefix:0 "Batak"
  batak_collective_noun:0 "Batak"
