--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -21,6 +21,9 @@
  japanese:0 "Yamato"
  japanese_prefix:0 "Japo"
  japanese_collective_noun:0 "Yamato"
+ dnieper_baltic:0 "Galindu"
+ dnieper_baltic_prefix:0 "Galindo"
+ dnieper_baltic_collective_noun:0 "Galindai"
  gothic:0 "Gutþisk"
  gothic_prefix:0 "Gotho"
  gothic_collective_noun:0 "Gutþiuda"
