--- a/localization/english/replace/culture_replace_l_english.yml
+++ b/localization/english/replace/culture_replace_l_english.yml
@@ -83,8 +83,8 @@
  portuguese_collective_noun:0 "Português"
  breton:0 "Bretoned"
  breton_collective_noun:0 "Bretoned"
- polish:0 "Polyanĭskŭ"
- polish_collective_noun:0 "Polyaki"
+ polish:0 "Poľanĭskŭ"
+ polish_collective_noun:0 "Poľaki"
  polabian:0 "Połabĭskŭ"
  polabian_collective_noun:1 "Połabaňe"
  bohemian:0 "Češĭskŭ"
