--- a/localization/english/replace/culture_replace_l_english.yml
+++ b/localization/english/replace/culture_replace_l_english.yml
@@ -35,8 +35,8 @@
  sicilian_collective_noun:0 "Sicilianu"
  sicilian_arabic:0 "Siqilli"
  sicilian_arabic_collective_noun:0 "Siqilli"
- pommeranian:0 "Vendi"
- pommeranian_collective_noun:0 "Vendi"
+ pommeranian:0 "Kašubĭskŭ"
+ pommeranian_collective_noun:0 "Kašubi"
  crusader_culture:0 "Levantine"
  crusader_culture_collective_noun:0 "Levantine"
  irish:0 "Goidel"
