--- a/localization/english/replace/culture_replace_l_english.yml
+++ b/localization/english/replace/culture_replace_l_english.yml
@@ -63,8 +63,8 @@
  swedish_collective_noun:0 "Svenskr"
  hungarian:0 "Magyar"
  hungarian_collective_noun:0 "Magyar"
- carantanian:0 "Karantánski"
- carantanian_collective_noun:0 "Karantánski"
+ carantanian:0 "Korǫtanĭskŭ"
+ carantanian_collective_noun:0 "Korotanĭki"
  sardinian:0 "Sardu"
  sardinian_collective_noun:0 "Sardu"
  moravian:0 "Moravĭskŭ"
