Moved some initialization scripts into scripted effects.

--- a/localization/english/replace/culture_replace_l_english.yml
+++ b/localization/english/replace/culture_replace_l_english.yml
@@ -98,7 +98,7 @@
  slovien_collective_noun:0 "Slověne"
  croatian:0 "Hrŭvatĭskŭ"
  croatian_collective_noun:0 "Hrŭvati"
- bulgarian:0 "blŭgarĭskŭ"
+ bulgarian:0 "Blŭgarĭskŭ"
  bulgarian_collective_noun:0 "Blŭgari"
  prussian:0 "Prusiskan"
  prussian_collective_noun:0 "Prusiskan"
