New Caucasian cultures added.

--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -1,21 +1,39 @@
 ﻿l_english:
  culture_parameter_unlock_maa_samurai:0 "Can recruit [GetMaA('samurai').GetName] as [men_at_arms|E]"
  chinese_clothing_gfx:0 "Chinese"
- name_list_korean:0 "Korean"
- name_list_japanese:0 "Japanese"
- name_list_ainu:0 "Ainu"
- name_list_malay:0 "Malay"
- name_list_javanese:0 "Javanese"
- name_list_cham:0 "Cham"
- name_list_achenese:0 "Achanese"
- name_list_vietnamese:0 "Vietnamese"
- name_list_thai:0 "Thai"
- name_list_khmer:0 "Khmer"
+ name_list_korean:0 "$korean$"
+ name_list_japanese:0 "$japanese$"
+ name_list_ainu:0 "$ainu$"
+ name_list_malay:0 "$malay$"
+ name_list_javanese:0 "$javanese$"
+ name_list_cham:0 "$cham$"
+ name_list_achenese:0 "$achenese$"
+ name_list_vietnamese:0 "$vietnamese$"
+ name_list_thai:0 "$thai$"
+ name_list_khmer:0 "$khmer$"
  name_list_han:0 "Mandarin"
- name_list_cantonese:0 "Cantonese"
- name_list_albanian:0 "Albanian"
- name_list_coptic:0 "Coptic"
- name_list_gothic:0 "Gothic"
+ name_list_cantonese:0 "$cantonese$"
+ name_list_albanian:0 "$albanian$"
+ name_list_coptic:0 "$egyptian_copt$"
+ name_list_gothic:0 "$gothic$"
+ name_list_caucasian_avar:0 "$caucasian_avar$"
+ name_list_udi:0 "$udi$"
+ name_list_circassian:0 "$circassian$"
+ name_list_arpitan:0 "$arpitan$"
+ name_list_dalmatian:0 "$dalmatian$"
+ name_list_laziale:0 "$laziale$"
+ name_list_ligurian:0 "$ligurian$"
+ name_list_neapolitan:0 "$neapolitan$"
+ name_list_tuscan:0 "$tuscan$"
+ name_list_umbrian:0 "$umbrian$"
+ name_list_venetian:0 "$venetian$"
+ name_list_chechen:0 "$chechen$"
+ romagnol:0 "Rumagnòl"
+ romagnol_prefix:0 "Rumagnòl"
+ romagnol_collective_noun:0 "Rumagnòl"
+ circassian:0 "Adyghe"
+ circassian_prefix:0 "Adyghe"
+ circassian_collective_noun:0 "Adyghekher"
  japanese_group:0 "Japanese"
  japanese_group_collective_noun:0 "Japanese"
  japanese:0 "Yamato"
@@ -24,6 +42,9 @@
  dnieper_baltic:0 "Galindu"
  dnieper_baltic_prefix:0 "Galindo"
  dnieper_baltic_collective_noun:0 "Galindai"
+ chechen:0 "Nokhchiy"
+ chechen_prefix:0 "Nokhchiy"
+ chechen_collective_noun:0 "Nokhchiy"
  gothic:0 "Gutþisk"
  gothic_prefix:0 "Gotho"
  gothic_collective_noun:0 "Gutþiuda"
