--- a/localization/english/culture/traditions/eastern_heritages_l_english.yml
+++ b/localization/english/culture/traditions/eastern_heritages_l_english.yml
@@ -17,3 +17,5 @@
  heritage_korean_collective_noun:0 "Koreans"
  heritage_malay_name:0 "Indonesian"
  heritage_malay_collective_noun:0 "Indonesians"
+ heritage_kavkaz_name:0 "Kavkaz"
+ heritage_kavkaz_collective_noun:0 "Kavkaz"
