--- a/localization/english/culture/traditions/eastern_languages_l_english.yml
+++ b/localization/english/culture/traditions/eastern_languages_l_english.yml
@@ -26,3 +26,7 @@
  language_ugric_name:0 "Ugric"
  language_albanian_name:0 "Albanian"
  language_gothic_name:0 "Gothic"
+ language_nakh_name:0 "Nakh"
+ language_circassian_name:0 "Adyghe"
+ language_lezgic_name:0 "Lezgic"
+ language_caucasian_avar_name:0 "Avar"
