--- a/localization/english/culture/traditions/eastern_traditions_l_english.yml
+++ b/localization/english/culture/traditions/eastern_traditions_l_english.yml
@@ -1,6 +1,11 @@
 ﻿l_english: 
  # Traditions
- tradition_bushido_name:0 "Bushido"
+ tradition_bushido_name:0 "Bushidō"
  tradition_bushido_desc:1 "Bushidō - Japanese for \"Way of the Warrior\" - was the set of codes of honour and ideals originating in Confucian, Zen Buddhist and Shinto teachings, that dictated the samurai way of life, loosely analogous to the European concept of chivalry."
  tradition_sauna_name:0 "Sauna"
  tradition_sauna_desc:1 "It is of high importance to cleanse our bodies of all the intoxicants in steaming heat, so that we may rejoin the world cleansed."
+ culture_parameter_safer_childbirths_active:0 "$doctrine_parameter_safer_childbirths_active$"
+ culture_parameter_healthier_children_active:0 "$doctrine_parameter_healthier_children_active$"
+ tradition_circassian_beauty_name:0 "Circassian Beauty"
+ tradition_circassian_beauty_desc:1 "There are folks songs in various languages all around the Middle East and Balkans describing the unusual beauty of Circassian women."
+ culture_parameter_beauty_trait_more_common:0 "The [GetTrait('beauty_good_1').GetName( GetNullCharacter )] [trait|E] is more common"
