--- a/localization/english/replace/kiev_l_english.yml
+++ b/localization/english/replace/kiev_l_english.yml
@@ -11,3 +11,16 @@
  holy_site_kiev_name:0 "Kiev"
  building_type_golden_gate_of_kiev_01:0 "Golden Gate of Kiev"
  building_type_golden_gate_of_kiev_01_desc:0 "Modeled and named after a gate in Constantinople, the Golden Gate of Kiev serves as both an entrance to the city and a triumphal arch. The golden dome of the church, built on top of the gate, can be seen from afar and makes it a prominent symbol of Kiev."
+ b_borschiv:0 "Borschov"
+ b_fastiv:0 "Fastov"
+ b_kaniv:0 "Kanev"
+ b_lvov:0 "Lvov"
+ b_ochakiv:0 "Ochakov"
+ b_vasyliv:0 "Vasilev"
+ c_lviv:0 "Lvov"
+ b_lviv:0 "Lvov"
+ b_chortkiv:0 "Chortkov"
+ b_ivankiv:0 "Ivankov"
+ b_liubeshiv:0 "Lyubeshov"
+ b_nedryhailiv:0 "Nedrigaylov"
+ b_bohodukhiv:0 "Bogodukhov"
