Updated sacred languages.

--- a/localization/english/religion/sacred_language_doctrines_l_english.yml
+++ b/localization/english/religion/sacred_language_doctrines_l_english.yml
@@ -27,6 +27,8 @@
  sacred_lang_brythonic_desc:0 "Our faith's sacred [language|e] is $language_brythonic_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_burmese_name:0 "$language_burmese_name$"
  sacred_lang_burmese_desc:0 "Our faith's sacred [language|e] is $language_burmese_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
+ sacred_lang_caucasian_avar_name:0 "$language_caucasian_avar_name$"
+ sacred_lang_caucasian_avar_desc:0 "Our faith's sacred [language|e] is $language_caucasian_avar_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_central_germanic_name:0 "$language_central_germanic_name$"
  sacred_lang_central_germanic_desc:0 "Our faith's sacred [language|e] is $language_central_germanic_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_central_iranian_name:0 "$language_central_iranian_name$"
@@ -37,6 +39,8 @@
  sacred_lang_cham_desc:0 "Our faith's sacred [language|e] is $language_cham_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_chinese_name:0 "$language_chinese_name$"
  sacred_lang_chinese_desc:0 "Our faith's sacred [language|e] is $language_chinese_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
+ sacred_lang_circassian_name:0 "$language_circassian_name$"
+ sacred_lang_circassian_desc:0 "Our faith's sacred [language|e] is $language_circassian_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_coptic_name:0 "$language_coptic_name$"
  sacred_lang_coptic_desc:0 "Our faith's sacred [language|e] is $language_coptic_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_cushitic_name:0 "$language_cushitic_name$"
@@ -97,6 +101,8 @@
  sacred_lang_latin_desc:0 "Our faith's sacred [language|e] is $language_latin_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_lechitic_name:0 "$language_lechitic_name$"
  sacred_lang_lechitic_desc:0 "Our faith's sacred [language|e] is $language_lechitic_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
+ sacred_lang_lezgic_name:0 "$language_lezgic_name$"
+ sacred_lang_lezgic_desc:0 "Our faith's sacred [language|e] is $language_lezgic_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_magyar_name:0 "$language_magyar_name$"
  sacred_lang_magyar_desc:0 "Our faith's sacred [language|e] is $language_magyar_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_malay_name:0 "$language_malay_name$"
@@ -107,6 +113,8 @@
  sacred_lang_mon_desc:0 "Our faith's sacred [language|e] is $language_mon_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_mongolic_name:0 "$language_mongolic_name$"
  sacred_lang_mongolic_desc:0 "Our faith's sacred [language|e] is $language_mongolic_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
+ sacred_lang_nakh_name:0 "$language_nakh_name$"
+ sacred_lang_nakh_desc:0 "Our faith's sacred [language|e] is $language_nakh_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_norse_name:0 "$language_norse_name$"
  sacred_lang_norse_desc:0 "Our faith's sacred [language|e] is $language_norse_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_north_iranian_name:0 "$language_north_iranian_name$"
@@ -167,5 +175,3 @@
  sacred_lang_west_iranian_desc:0 "Our faith's sacred [language|e] is $language_west_iranian_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_yoruba_name:0 "$language_yoruba_name$"
  sacred_lang_yoruba_desc:0 "Our faith's sacred [language|e] is $language_yoruba_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
- 
- 
